# smart-pot

./: .dockerignore  .gitignore  Cargo.toml  Config.example.toml  Config.toml  Dockerfile  docker-compose.yaml  sdkconfig.defaults
.cargo/: config.toml
src/: config.rs  constants.rs  core.rs  init_cert.c  lib.rs  main.rs  telemtry.rs  utils.rs
src/config/: settings.rs
src/core/: azure.rs  client.rs  error.rs  esp.rs  task.rs  telemetry.rs  wifi.rs
src/core/azure/: dps.rs  iot_hub.rs
src/core/esp/: bh1750.rs  board.rs  dht_sensor.rs  ds18b20.rs  mod.rs  wifi.rs
src/core/esp/modules/: ds18b20.rs  mod.rs  wifi.rs
src/core/sensors/: mod.rs
src/utils/: constants.rs
