[package]
name = "smart-pot"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "esp32"
path = "src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
dotenv = "0.15.0"
log = "0.4.26"
mod_interface = "0.30.0"
#rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
#tokio-rustls = "0.26.2"
#webpki-roots = "0.26.8"
#rumqttc = "0.24.0"
#esp32 deps 
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = "0.36.1"
esp-idf-hal = "0.45.2"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
futures = "0.3.28"
embedded-svc = "0.28.1"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33"
